--- a/Hawaii/UI/Storyboard/Dashboard.storyboard
+++ b/Hawaii/UI/Storyboard/Dashboard.storyboard
@@ -395,11 +395,9 @@
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="FpC-NP-oih" firstAttribute="width" secondItem="1Ta-d2-kTx" secondAttribute="width" id="1gw-Go-Ndw"/>
                                     <constraint firstAttribute="trailing" secondItem="FpC-NP-oih" secondAttribute="trailing" id="9vQ-WB-lFQ"/>
                                     <constraint firstAttribute="bottom" secondItem="FpC-NP-oih" secondAttribute="bottom" id="FQM-e8-0VV"/>
                                     <constraint firstItem="FpC-NP-oih" firstAttribute="leading" secondItem="1Ta-d2-kTx" secondAttribute="leading" id="HIG-ZY-h2Z"/>
-                                    <constraint firstItem="FpC-NP-oih" firstAttribute="height" secondItem="1Ta-d2-kTx" secondAttribute="height" priority="750" id="bfb-3T-OMr"/>
                                     <constraint firstItem="FpC-NP-oih" firstAttribute="top" secondItem="1Ta-d2-kTx" secondAttribute="top" id="pXG-3Z-Vp8"/>
                                 </constraints>
                             </scrollView>
@@ -408,7 +406,9 @@
                             <constraint firstItem="1Ta-d2-kTx" firstAttribute="centerY" secondItem="udw-Lg-t7W" secondAttribute="centerY" id="0uZ-5j-UbE"/>
                             <constraint firstItem="1Ta-d2-kTx" firstAttribute="centerX" secondItem="udw-Lg-t7W" secondAttribute="centerX" id="AcG-V6-0yx"/>
                             <constraint firstItem="1Ta-d2-kTx" firstAttribute="top" secondItem="udw-Lg-t7W" secondAttribute="top" id="PFa-bH-3sS"/>
+                            <constraint firstItem="FpC-NP-oih" firstAttribute="height" secondItem="kuB-Sp-uuM" secondAttribute="height" priority="750" id="Wx4-L2-bgT"/>
                             <constraint firstItem="1Ta-d2-kTx" firstAttribute="leading" secondItem="udw-Lg-t7W" secondAttribute="leading" id="aAj-3s-kCS"/>
+                            <constraint firstItem="FpC-NP-oih" firstAttribute="width" secondItem="kuB-Sp-uuM" secondAttribute="width" id="tYR-TK-AcW"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="udw-Lg-t7W"/>
                     </view>
@@ -513,11 +513,11 @@
         <scene sceneID="ya0-QJ-4Jk">
             <objects>
                 <viewController modalPresentationStyle="overFullScreen" id="J1q-Wn-6ss" customClass="CustomDatePickerTableViewController" customModule="Hawaii" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" ambiguous="YES" id="n9W-06-0ZG">
+                    <view key="view" contentMode="scaleToFill" id="n9W-06-0ZG">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="250"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xkm-uc-93u">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xkm-uc-93u">
                                 <rect key="frame" x="320" y="76" width="39" height="30"/>
                                 <state key="normal" title="Close"/>
                                 <connections>
@@ -530,13 +530,13 @@
                                     <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Cwk-hu-vPr">
                                         <rect key="frame" x="0.0" y="0.0" width="275" height="50"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="dateLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9fu-0a-q3m">
-                                                <rect key="frame" x="99.333333333333343" y="15.666666666666655" width="75.666666666666657" height="20.333333333333329"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="dateLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9fu-0a-q3m">
+                                                <rect key="frame" x="99.333333333333343" y="15.666666666666671" width="75.666666666666657" height="20.333333333333329"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oEi-Du-DJg">
+                                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oEi-Du-DJg">
                                                 <rect key="frame" x="175" y="9.6666666666666572" width="30" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="30" id="jTh-2y-8Ck"/>
@@ -550,7 +550,7 @@
                                                     <action selector="nextMonthPressed:" destination="bf3-dA-dnU" eventType="touchUpInside" id="xOk-tv-Qut"/>
                                                 </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SgM-lc-XhT">
+                                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SgM-lc-XhT">
                                                 <rect key="frame" x="70" y="10" width="30" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="30" id="Pg4-IC-oW5"/>
@@ -752,7 +752,7 @@
             <objects>
                 <viewController id="Xx0-t7-Yha" customClass="RemainigDaysViewController" customModule="Hawaii" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="MhO-bX-E5G">
-                        <rect key="frame" x="0.0" y="0.0" width="374" height="150"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="HOLIDAY" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tkr-6z-WNa">
@@ -1017,6 +1017,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="sxZ-sE-1Xq"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MuU-nW-Crk" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1030,6 +1031,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="Ok1-ui-ETM"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QcW-TA-hXC" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1040,7 +1042,7 @@
         <image name="calendar" width="25" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Cqg-X7-eO8"/>
+        <segue reference="9YR-6r-Hjh"/>
         <segue reference="7Qi-Z7-6Yo"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
