--- a/Hawaii/UI/Controller/Cell/RequestDetailTableViewCell.xib
+++ b/Hawaii/UI/Controller/Cell/RequestDetailTableViewCell.xib
@@ -122,7 +122,7 @@
                         </userDefinedRuntimeAttributes>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gry-CS-jb0">
-                        <rect key="frame" x="207" y="221" width="115" height="30"/>
+                        <rect key="frame" x="199" y="221" width="115" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="115" id="7rz-PK-E6Q"/>
                             <constraint firstAttribute="height" constant="30" id="HSE-Rq-787"/>
@@ -157,13 +157,13 @@
                     <constraint firstItem="amn-Lz-fUh" firstAttribute="centerY" secondItem="TIh-1i-w96" secondAttribute="centerY" id="5gr-st-CYX"/>
                     <constraint firstItem="CjV-k9-aEj" firstAttribute="centerY" secondItem="rCg-Dk-w4V" secondAttribute="centerY" id="62I-Qh-U1q"/>
                     <constraint firstItem="kQv-mE-Odu" firstAttribute="top" secondItem="TIh-1i-w96" secondAttribute="bottom" constant="13" id="6S0-NW-LDr"/>
+                    <constraint firstItem="Gry-CS-jb0" firstAttribute="trailing" secondItem="Q6R-x6-Cos" secondAttribute="trailing" id="6ef-76-PvE"/>
                     <constraint firstItem="Q6R-x6-Cos" firstAttribute="centerY" secondItem="H53-KI-ADV" secondAttribute="centerY" id="8bQ-V3-U5Z"/>
                     <constraint firstItem="rCg-Dk-w4V" firstAttribute="trailing" secondItem="Rda-Yz-vMM" secondAttribute="trailing" id="AoP-cA-hnm"/>
                     <constraint firstItem="rCg-Dk-w4V" firstAttribute="top" secondItem="Rda-Yz-vMM" secondAttribute="bottom" constant="17.5" id="Ap5-X7-61U"/>
                     <constraint firstItem="rCg-Dk-w4V" firstAttribute="height" secondItem="Rda-Yz-vMM" secondAttribute="height" id="EYV-Mo-by4"/>
                     <constraint firstAttribute="trailing" secondItem="Q6R-x6-Cos" secondAttribute="trailing" constant="24" id="GKr-hF-gP8"/>
                     <constraint firstItem="Rda-Yz-vMM" firstAttribute="top" secondItem="kQv-mE-Odu" secondAttribute="bottom" constant="13" id="GrH-Ho-1CZ"/>
-                    <constraint firstItem="Gry-CS-jb0" firstAttribute="trailing" secondItem="CjV-k9-aEj" secondAttribute="trailing" id="Jze-ee-lui"/>
                     <constraint firstItem="v3N-Nv-jh7" firstAttribute="top" secondItem="gXn-VY-h8j" secondAttribute="bottom" constant="5" id="MMV-Bs-ZBt"/>
                     <constraint firstItem="H53-KI-ADV" firstAttribute="leading" secondItem="gXn-VY-h8j" secondAttribute="trailing" constant="23" id="NcZ-M8-cYz"/>
                     <constraint firstItem="TIh-1i-w96" firstAttribute="trailing" secondItem="Rda-Yz-vMM" secondAttribute="trailing" id="Q2P-qU-SP8"/>
