--- a/Hawaii/UI/Storyboard/Dashboard.storyboard
+++ b/Hawaii/UI/Storyboard/Dashboard.storyboard
@@ -518,17 +518,17 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xkm-uc-93u">
-                                <rect key="frame" x="320" y="76" width="39" height="30"/>
+                                <rect key="frame" x="320" y="75.999999999999972" width="39" height="30"/>
                                 <state key="normal" title="Close"/>
                                 <connections>
                                     <action selector="closeDialog:" destination="J1q-Wn-6ss" eventType="touchUpInside" id="jmV-Xf-4xW"/>
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="1sU-sM-RvG">
-                                <rect key="frame" x="50" y="144" width="275" height="500.33333333333326"/>
+                                <rect key="frame" x="50" y="144" width="275" height="520.66666666666652"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Cwk-hu-vPr">
-                                        <rect key="frame" x="0.0" y="0.0" width="275" height="50"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="275" height="60"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="dateLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9fu-0a-q3m">
                                                 <rect key="frame" x="99.333333333333343" y="15.666666666666671" width="75.666666666666657" height="20.333333333333329"/>
@@ -578,7 +578,7 @@
                                         </constraints>
                                     </view>
                                     <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Xga-bS-DeP">
-                                        <rect key="frame" x="0.0" y="50" width="275" height="20.333333333333329"/>
+                                        <rect key="frame" x="0.0" y="60.000000000000021" width="275" height="20.333333333333336"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="M" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kHm-ex-Iwq">
                                                 <rect key="frame" x="0.0" y="0.0" width="39.333333333333336" height="20.333333333333332"/>
@@ -657,7 +657,7 @@
                                         </constraints>
                                     </stackView>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="CN0-Tc-aUi" customClass="JTAppleCalendarView" customModule="JTAppleCalendar">
-                                        <rect key="frame" x="0.0" y="70.333333333333371" width="275" height="400"/>
+                                        <rect key="frame" x="0.0" y="80.333333333333343" width="275" height="400.33333333333326"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" priority="750" constant="400" id="zjc-AO-CcA"/>
@@ -671,7 +671,7 @@
                                         <cells/>
                                     </collectionView>
                                     <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="751" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eso-mp-NcH">
-                                        <rect key="frame" x="0.0" y="470.33333333333337" width="275" height="30"/>
+                                        <rect key="frame" x="0.0" y="480.66666666666663" width="275" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="cym-QU-okv"/>
                                         </constraints>
@@ -768,10 +768,9 @@
                                 <rect key="frame" x="16" y="84" width="342" height="30"/>
                                 <subviews>
                                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nxh-VN-QYw">
-                                        <rect key="frame" x="0.0" y="0.0" width="140" height="30"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="342" height="30"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="140" id="Ita-Rd-VMa"/>
                                             <constraint firstAttribute="height" constant="30" id="Yh6-Dv-16o"/>
                                         </constraints>
                                         <userDefinedRuntimeAttributes>
@@ -793,10 +792,9 @@
                                         </userDefinedRuntimeAttributes>
                                     </view>
                                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FXT-Ml-8Y1">
-                                        <rect key="frame" x="0.0" y="0.0" width="120" height="30"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="342" height="30"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="120" id="4cJ-m0-bKi"/>
                                             <constraint firstAttribute="height" constant="30" id="ofl-Tg-vf8"/>
                                         </constraints>
                                         <userDefinedRuntimeAttributes>
@@ -852,6 +850,7 @@
                                 <constraints>
                                     <constraint firstItem="FXT-Ml-8Y1" firstAttribute="top" secondItem="VUD-IJ-noa" secondAttribute="top" id="0f3-mf-uSz"/>
                                     <constraint firstAttribute="bottom" secondItem="FXT-Ml-8Y1" secondAttribute="bottom" id="1Mw-Il-Uxp"/>
+                                    <constraint firstAttribute="trailing" secondItem="FXT-Ml-8Y1" secondAttribute="trailing" priority="750" id="1TX-4d-Npp"/>
                                     <constraint firstItem="b9X-fo-N6V" firstAttribute="centerY" secondItem="Nxh-VN-QYw" secondAttribute="centerY" id="6EZ-cl-szb"/>
                                     <constraint firstAttribute="bottom" secondItem="wSw-1m-ZqT" secondAttribute="bottom" id="A3I-TA-dYJ"/>
                                     <constraint firstAttribute="height" constant="30" id="Hux-8L-tno"/>
@@ -860,8 +859,9 @@
                                     <constraint firstItem="wSw-1m-ZqT" firstAttribute="top" secondItem="VUD-IJ-noa" secondAttribute="top" id="QHz-QY-Jav"/>
                                     <constraint firstAttribute="trailing" secondItem="b9X-fo-N6V" secondAttribute="trailing" constant="10" id="fCN-ST-ZEK"/>
                                     <constraint firstItem="wSw-1m-ZqT" firstAttribute="leading" secondItem="VUD-IJ-noa" secondAttribute="leading" id="ffm-zq-KPa"/>
-                                    <constraint firstItem="b9X-fo-N6V" firstAttribute="leading" secondItem="wSw-1m-ZqT" secondAttribute="trailing" id="kb5-ZQ-Jfa"/>
+                                    <constraint firstItem="b9X-fo-N6V" firstAttribute="leading" secondItem="wSw-1m-ZqT" secondAttribute="trailing" priority="750" id="kb5-ZQ-Jfa"/>
                                     <constraint firstItem="Nxh-VN-QYw" firstAttribute="leading" secondItem="VUD-IJ-noa" secondAttribute="leading" id="ryT-BR-Igx"/>
+                                    <constraint firstAttribute="trailing" secondItem="Nxh-VN-QYw" secondAttribute="trailing" priority="750" id="t4J-fU-QbN"/>
                                     <constraint firstItem="Nxh-VN-QYw" firstAttribute="top" secondItem="VUD-IJ-noa" secondAttribute="top" id="tP1-bp-how"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
